# event-countdown-cli

./: .gitignore  DESIGN.md  README.md  pyproject.toml
climatter/: __init__.py  config.py  display_events.py  get_events.py  main.py
climatter/default_config/: config.yaml
counting-days/: display_events.py  event.py  get_events.py  main.py
counting-days/lang/: en.py
events/: test.events
