[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climatter"
version = "0.0.1"
description = "Remember what matters - A CLI tool to track and countdown to your important days"
readme = "README.md"  # Optional, only if you create one
requires-python = ">=3.9"
dependencies = [
    "rich==14.3.2",
]

[project.scripts]
climatter = "climatter.main:main"

[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
